tests/baselines/reference/checkJsdocReturnTag2.errors.txt
returns.js(6,5): error TS2322: Type 'number' is not assignable to type 'string'.
returns.js(13,5): error TS2322: Type 'number | boolean' is not assignable to type 'string | number'.
  Type 'boolean' is not assignable to type 'string | number'.


==== returns.js (2 errors) ====
    // @ts-check
    /**
     * @returns {string} This comment is not currently exposed
     */
    function f() {
        return 5;
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    }
    
    /**
     * @returns {string | number} This comment is not currently exposed
     */
    function f1() {
        return 5 || true;
        ~~~~~~
!!! error TS2322: Type 'number | boolean' is not assignable to type 'string | number'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string | number'.
    }
    